src/types/tests/snapshots/tgbot__types__tests__venue__send_venue-2.snap
---
source: src/types/tests/venue.rs
expression: actual_data
---
{
  "address": "addr",
  "chat_id": 1,
  "latitude": 2.0,
  "longitude": 3.0,
  "title": "title"
}
