src/types/tests/snapshots/tgbot__types__tests__venue__send_venue.snap
---
source: src/types/tests/venue.rs
expression: actual_data
---
{
  "address": "addr",
  "allow_paid_broadcast": true,
  "business_connection_id": "id",
  "callback_query_id": "cqid",
  "chat_id": 1,
  "direct_messages_topic_id": 1,
  "disable_notification": true,
  "foursquare_id": "f-id",
  "foursquare_type": "f-type",
  "google_place_id": "g-id",
  "google_place_type": "g-type",
  "latitude": 2.0,
  "longitude": 3.0,
  "message_effect_id": "effect-id",
  "message_thread_id": 1,
  "protect_content": true,
  "receiver_user_id": 999,
  "reply_markup": {
    "force_reply": true
  },
  "reply_parameters": {
    "message_id": 1
  },
  "suggested_post_parameters": {},
  "title": "title"
}
