src/types/tests/snapshots/tgbot__types__tests__venue__venue-2.snap
---
source: src/types/tests/venue.rs
expression: "Venue::new(\"venue title\", \"venue address\", Location::new(1.0, 2.0))"
---
{
  "address": "venue address",
  "location": {
    "latitude": 1.0,
    "longitude": 2.0
  },
  "title": "venue title"
}
